dynamix/force-app/main/default/objects/BookingForm_OTP_Data__mdt/BookingForm_OTP_Data__mdt.object-meta.xml
<CustomObject>
    <label>BookingForm OTP Data</label>
    <pluralLabel>BookingForm OTP Data</pluralLabel>
</CustomObject>