dynamix/force-app/main/default/objects/BookingForm_OTP_Data__mdt/fields/Authorization_Header__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Header__c</fullName>
    <label>Authorization Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>