dynamix/force-app/main/default/objects/BookingForm_OTP_Data__mdt/fields/Booking_OTP__c.field-meta.xml
<CustomField>
    <fullName>Booking_OTP__c</fullName>
    <label>Booking OTP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>