dynamix/force-app/main/default/objects/BookingForm_OTP_Data__mdt/fields/CIF_OTP_Message_Body__c.field-meta.xml
<CustomField>
    <fullName>CIF_OTP_Message_Body__c</fullName>
    <label>CIF OTP Message Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>