dynamix/force-app/main/default/objects/BookingForm_OTP_Data__mdt/fields/CIF_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>CIF_Template_Id__c</fullName>
    <label>CIF Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>