dynamix/force-app/main/default/objects/BookingForm_OTP_Data__mdt/fields/Content_Type_Header__c.field-meta.xml
<CustomField>
    <fullName>Content_Type_Header__c</fullName>
    <label>Content Type Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>